Amlogic-ne: bump vendor linux to 5.4.125-20221221
linux: bump package to 14bd7367
media_modules-aml: bump package to 5411db46

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -4158,6 +4158,8 @@ CONFIG_AMLOGIC_SND_CODEC_DUMMY_CODEC=y
 CONFIG_AMLOGIC_SND_CODEC_AMLT9015=y
 # CONFIG_AMLOGIC_SND_CODEC_AMLT9015S is not set
 CONFIG_AMLOGIC_SND_SOC_TAS5805=y
+CONFIG_AMLOGIC_SND_SOC_TAS5805m=y
+CONFIG_AMLOGIC_SND_SOC_TLV320ADC5140=y
 # CONFIG_AMLOGIC_SND_CODEC_TXLX_ACODEC is not set
 CONFIG_AMLOGIC_SND_CODEC_TL1_ACODEC=y
 # CONFIG_AMLOGIC_SND_SOC_TAS5782M is not set
@@ -4170,6 +4172,7 @@ CONFIG_AMLOGIC_SND_SOC_TAS5707=y
 # CONFIG_AMLOGIC_SND_SOC_ES7243 is not set
 CONFIG_AMLOGIC_SND_SOC_AD82584F=y
 # CONFIG_AMLOGIC_SND_SOC_AD82587D is not set
+CONFIG_AMLOGIC_SND_SOC_AD82128=y
 # CONFIG_AMLOGIC_SND_SOC_CS42528 is not set
 # end of CODEC drivers
 
@@ -4934,14 +4937,6 @@ CONFIG_ION_SYSTEM_HEAP=y
 # CONFIG_KPC2000 is not set
 # CONFIG_USB_WUSB_CBAF is not set
 # CONFIG_UWB is not set
-CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_DONT_MOUNT_VFAT=y
-CONFIG_EXFAT_DISCARD=y
-# CONFIG_EXFAT_DELAYED_SYNC is not set
-# CONFIG_EXFAT_KERNEL_DEBUG is not set
-# CONFIG_EXFAT_DEBUG_MSG is not set
-CONFIG_EXFAT_DEFAULT_CODEPAGE=437
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_QLGE is not set
 # CONFIG_GOLDFISH is not set
 # CONFIG_MFD_CROS_EC is not set
@@ -5727,6 +5722,7 @@ CONFIG_AMLOGIC_MEDIA_ENABLE=y
 CONFIG_AMLOGIC_MEDIA_COMMON=y
 CONFIG_AMLOGIC_MEDIA_DRIVERS=y
 CONFIG_AMLOGIC_MEDIA_MULTI_DEC=y
+# CONFIG_AMLOGIC_MEDIA_NO_PARSER is not set
 
 #
 # Canvas management driver
@@ -5782,8 +5778,13 @@ CONFIG_AMLOGIC_MEDIA_SECURITY=y
 #
 # ResManage driver
 #
-CONFIG_AMLOGIC_MEDIA_RESMANAGE=y
+# CONFIG_AMLOGIC_MEDIA_RESMANAGE is not set
 # end of ResManage driver
+
+#
+# Amlogic dma-buf support
+#
+# end of Amlogic dma-buf support
 
 CONFIG_AMLOGIC_MEDIA_CAMERA=y
 
@@ -5999,6 +6000,16 @@ CONFIG_AMLOGIC_MEDIA_ENHANCEMENT_DOLBYVISION=y
 #
 CONFIG_AMLOGIC_MEDIA_ENHANCEMENT_VECM=y
 # end of Amlogic amvecm Driver
+
+#
+# Amlogic amprime_sl Drivers
+#
+
+#
+# Amlogic amprime_sl Driver
+#
+# CONFIG_AMLOGIC_MEDIA_ENHANCEMENT_PRIME_SL is not set
+# end of Amlogic amprime_sl Driver
 # end of Amlogic Enhancement drivers
 
 CONFIG_AMLOGIC_MEDIA_FRAME_SYNC=y
@@ -6055,6 +6066,12 @@ CONFIG_AMLOGIC_MEDIA_FRC=y
 #
 CONFIG_AMLOGIC_DI_V4L=y
 # end of Amlogic di v4l support
+
+#
+# VPP driver
+#
+CONFIG_AMLOGIC_MEDIA_VPP=y
+# end of VPP driver
 # end of Amlogic multimedia configuration
 
 CONFIG_AMLOGIC_PCIE=y
@@ -6187,6 +6204,8 @@ CONFIG_AMLOGIC_CPU_INFO=y
 # CONFIG_AMLOGIC_INTERNAL_PHY is not set
 # CONFIG_AMLOGIC_SOC_INFO is not set
 # CONFIG_GATOR is not set
+# CONFIG_AES_HWKEY_GCM is not set
+# CONFIG_VAD_WAKEUP_ASR is not set
 # end of Amlogic Device Drivers
 
 #
@@ -6211,6 +6230,8 @@ CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_FS_MBCACHE=y
 CONFIG_REISERFS_FS=y
 # CONFIG_REISERFS_CHECK is not set
@@ -6301,6 +6322,7 @@ CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
 # CONFIG_NTFS_FS is not set
+# CONFIG_NTFS3_FS is not set
 # end of DOS/FAT/NT Filesystems
 
 #
