Amlogic-ne: add Maxio MAE0621A PHY driver
linux: bump package to afcb43a2

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -2177,6 +2177,7 @@ CONFIG_MICROCHIP_PHY=m
 CONFIG_REALTEK_PHY=y
 # CONFIG_RENESAS_PHY is not set
 # CONFIG_ROCKCHIP_PHY is not set
+CONFIG_MAXIO_PHY=y
 # CONFIG_SMSC_PHY is not set
 # CONFIG_STE10XP is not set
 # CONFIG_TERANETICS_PHY is not set
