--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -1,11 +1,12 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.4.125 Kernel Configuration
+# Linux/arm64 5.4.180 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-none-elf-gcc-12.2.0 (GCC) 12.2.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=120200
 CONFIG_CLANG_VERSION=0
+CONFIG_LLD_VERSION=0
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_IRQ_WORK=y
@@ -15,7 +16,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 # General setup
 #
-CONFIG_INIT_ENV_ARG_LIMIT=32
+CONFIG_INIT_ENV_ARG_LIMIT=128
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
@@ -39,7 +40,6 @@ CONFIG_GENERIC_IRQ_SHOW=y
 CONFIG_GENERIC_IRQ_SHOW_LEVEL=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
-CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_IPI=y
@@ -203,6 +203,7 @@ CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_BPF_SYSCALL=y
 # CONFIG_BPF_JIT_ALWAYS_ON is not set
 CONFIG_BPF_JIT_ALWAYS_ON_AMLOGIC=y
+# CONFIG_BPF_UNPRIV_DEFAULT_OFF is not set
 # CONFIG_USERFAULTFD is not set
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_RSEQ=y
@@ -378,6 +379,7 @@ CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_HARDEN_EL2_VECTORS=y
 CONFIG_ARM64_SSBD=y
+CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_RODATA_FULL_DEFAULT_ENABLED=y
 CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
@@ -514,6 +516,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 #
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPUFREQ_DUMMY is not set
+CONFIG_ARM_BIG_LITTLE_CPUFREQ=y
 # CONFIG_QORIQ_CPUFREQ is not set
 # end of CPU Frequency scaling
 # end of CPU Power Management
@@ -1539,6 +1542,7 @@ CONFIG_MTD=y
 #
 CONFIG_MTD_BLKDEVS=y
 CONFIG_MTD_BLOCK=y
+CONFIG_AMLOGIC_NAND=y
 # CONFIG_FTL is not set
 # CONFIG_NFTL is not set
 # CONFIG_INFTL is not set
@@ -2647,6 +2651,7 @@ CONFIG_SPI_MEM=y
 # CONFIG_SPI_FSL_SPI is not set
 CONFIG_SPI_MESON_SPICC=y
 CONFIG_SPI_MESON_SPIFC=y
+# CONFIG_SPI_MESON_SPICC_SLAVE is not set
 # CONFIG_SPI_OC_TINY is not set
 # CONFIG_SPI_PL022 is not set
 # CONFIG_SPI_PXA2XX is not set
@@ -2718,6 +2723,10 @@ CONFIG_PINCTRL_MESON_SC2=y
 CONFIG_PINCTRL_MESON_T7=y
 CONFIG_PINCTRL_MESON_S4=y
 CONFIG_PINCTRL_MESON_T3=y
+# CONFIG_PINCTRL_MESON_P1 is not set
+# CONFIG_PINCTRL_MESON_T5W is not set
+# CONFIG_PINCTRL_MESON_A5 is not set
+CONFIG_PINCTRL_MESON_S5=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIOLIB_FASTPATH_LIMIT=512
 CONFIG_OF_GPIO=y
@@ -2832,6 +2841,7 @@ CONFIG_POWER_SUPPLY_HWMON=y
 # CONFIG_CHARGER_BQ25890 is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
 # CONFIG_CHARGER_UCS1002 is not set
 CONFIG_HWMON=y
@@ -4976,6 +4986,7 @@ CONFIG_COMMON_CLK_MESON_VID_PLL_DIV=y
 CONFIG_COMMON_CLK_MESON_AO_CLKC=y
 CONFIG_COMMON_CLK_MESON_EE_CLKC=y
 CONFIG_COMMON_CLK_MESON_CPU_DYNDIV=y
+# CONFIG_COMMON_CLK_AXG is not set
 # CONFIG_COMMON_CLK_AXG_AUDIO is not set
 CONFIG_COMMON_CLK_G12A=y
 CONFIG_COMMON_CLK_TM2=y
@@ -4984,6 +4995,10 @@ CONFIG_COMMON_CLK_SC2=y
 CONFIG_COMMON_CLK_T7=y
 CONFIG_COMMON_CLK_S4=y
 CONFIG_COMMON_CLK_T3=y
+# CONFIG_COMMON_CLK_P1 is not set
+# CONFIG_COMMON_CLK_T5W is not set
+# CONFIG_COMMON_CLK_A5 is not set
+CONFIG_COMMON_CLK_S5=y
 CONFIG_MESON_CLKC_MODULE=y
 # end of Common Clock Framework
 
@@ -5665,6 +5680,8 @@ CONFIG_AMLOGIC_MEDIA_V4L_DEC=y
 #
 CONFIG_AMLOGIC_DVB=y
 CONFIG_AMLOGIC_DVB_COMPAT=y
+CONFIG_AMLOGIC_MFD=y
+CONFIG_AMLOGIC_REGULATOR=y
 # end of Amlogic dvb configuration
 
 #
@@ -5678,6 +5695,7 @@ CONFIG_AMLOGIC_MEDIA_ALGORITHM=y
 # end of Amlogic multimedia algorithm configuration
 
 CONFIG_AMLOGIC_MESON_CPUFREQ=y
+CONFIG_AMLOGIC_SCPI_CPUFREQ=y
 CONFIG_AMLOGIC_EFUSE_UNIFYKEY=y
 CONFIG_AMLOGIC_EFUSE=y
 CONFIG_AMLOGIC_UNIFYKEY=y
@@ -5691,6 +5709,7 @@ CONFIG_AMLOGIC_DDR_BANDWIDTH_T7=y
 # CONFIG_AMLOGIC_DDR_BANDWIDTH_A1 is not set
 CONFIG_AMLOGIC_DDR_BANDWIDTH_T5=y
 CONFIG_AMLOGIC_DDR_BANDWIDTH_S4=y
+CONFIG_AMLOGIC_DDR_BANDWIDTH_S5=y
 CONFIG_AMLOGIC_DMC_MONITOR=y
 CONFIG_AMLOGIC_DMC_MONITOR_G12=y
 # CONFIG_AMLOGIC_DMC_MONITOR_TM2 is not set
@@ -5698,6 +5717,7 @@ CONFIG_AMLOGIC_DMC_MONITOR_G12=y
 # CONFIG_AMLOGIC_DMC_MONITOR_C1 is not set
 CONFIG_AMLOGIC_DMC_MONITOR_T7=y
 CONFIG_AMLOGIC_DMC_MONITOR_S4=y
+CONFIG_AMLOGIC_DMC_MONITOR_S5=y
 
 #
 # Amlogic Crypto Support
@@ -5787,6 +5807,12 @@ CONFIG_AMLOGIC_MEDIA_SECURITY=y
 #
 # end of Amlogic dma-buf support
 
+#
+# Amlogic VICP Module
+#
+CONFIG_AMLOGIC_MEDIA_VICP=y
+# end of Amlogic VICP Module
+
 CONFIG_AMLOGIC_MEDIA_CAMERA=y
 
 #
@@ -5830,6 +5856,7 @@ CONFIG_AMLOGIC_LCD_EXTERN=y
 # CONFIG_AMLOGIC_LCD_EXTERN_I2C_DLPC3439 is not set
 # CONFIG_AMLOGIC_LCD_EXTERN_I2C_ANX6345 is not set
 # CONFIG_AMLOGIC_LCD_EXTERN_I2C_CS602 is not set
+# CONFIG_AMLOGIC_LCD_EXTERN_I2C_OLED is not set
 # CONFIG_AMLOGIC_LCD_EXTERN_SPI_LD070WS2 is not set
 # CONFIG_AMLOGIC_LCD_EXTERN_MIPI_KD080D13 is not set
 # CONFIG_AMLOGIC_LCD_EXTERN_MIPI_N070ICN is not set
@@ -5838,6 +5865,12 @@ CONFIG_AMLOGIC_LCD_EXTERN=y
 # CONFIG_AMLOGIC_LCD_EXTERN_MIPI_P070ACB is not set
 # CONFIG_AMLOGIC_LCD_EXTERN_MIPI_TL050FHV02CT is not set
 # end of Amlogic LCD Output Module
+
+#
+# Amlogic Peripheral_lcd Support
+#
+# CONFIG_AMLOGIC_PERIPHERAL_LCD is not set
+# end of Amlogic Peripheral_lcd Support
 
 CONFIG_AMLOGIC_VOUT_SERVE=y
 CONFIG_AMLOGIC_VOUT2_SERVE=y
@@ -6077,6 +6110,7 @@ CONFIG_AMLOGIC_MEDIA_VPP=y
 
 CONFIG_AMLOGIC_PCIE=y
 # CONFIG_AMLOGIC_PCIE_RC is not set
+# CONFIG_AMLOGIC_PCIE_V3 is not set
 
 #
 # Amlogic Thermal and Cooling devices
@@ -6087,6 +6121,7 @@ CONFIG_AMLOGIC_CPUCORE_THERMAL=y
 CONFIG_AMLOGIC_GPU_THERMAL=y
 CONFIG_AMLOGIC_GPUCORE_THERMAL=y
 CONFIG_AMLOGIC_DDR_THERMAL=y
+CONFIG_AMLOGIC_GX_TEMP_SENSOR=y
 # end of Amlogic Thermal and Cooling devices
 
 CONFIG_AMLOGIC_CLK_DEBUG=y
@@ -6118,6 +6153,7 @@ CONFIG_AMLOGIC_AUCPU=y
 # AMLOGIC DVB demux/dsc support
 #
 CONFIG_AMLOGIC_DVB_DMX=m
+CONFIG_AMLOGIC_DVB_DSM=m
 # end of AMLOGIC DVB demux/dsc support
 
 CONFIG_AMLOGIC_DRM=y
@@ -6164,14 +6200,19 @@ CONFIG_AMLOGIC_DEBUG_FTRACE_PSTORE=y
 CONFIG_AMLOGIC_MEMORY_EXTEND=y
 # CONFIG_AMLOGIC_PAGE_TRACE is not set
 CONFIG_AMLOGIC_RAMDUMP=y
+CONFIG_AMLOGIC_KDUMP=y
 CONFIG_AMLOGIC_CMA=y
 # CONFIG_AMLOGIC_VMAP is not set
 # CONFIG_AMLOGIC_VMALLOC_SHRINKER is not set
+CONFIG_AMLOGIC_STACKPROTECTOR=y
 # CONFIG_AMLOGIC_WATCHPOINT is not set
 # CONFIG_AMLOGIC_MEM_DEBUG is not set
+# CONFIG_AMLOGIC_PIN_LOCKED_FILE is not set
 CONFIG_AMLOGIC_BT_DEVICE=y
+CONFIG_AMLOGIC_BT_WAKE_NOT_REPORT=y
 CONFIG_AMLOGIC_WIFI=y
 CONFIG_AMLOGIC_PWM_32K=y
+# CONFIG_WIFI_POWER_INIT_OFF is not set
 CONFIG_AMLOGIC_UART=y
 CONFIG_AMLOGIC_SERIAL_MESON_CONSOLE=y
 # CONFIG_AMLOGIC_PRINTK_NOBLOCK_MODE is not set
@@ -6183,9 +6224,8 @@ CONFIG_AMLOGIC_SERIAL_MESON_CONSOLE=y
 CONFIG_MTD_RESV_MESON=y
 # end of Meson MTD RESERVED AREA MANAGEMENT Support
 
-CONFIG_AMLOGIC_LED=y
-CONFIG_AMLOGIC_LEDS_TLC59116=y
-CONFIG_AMLOGIC_LEDS_STATE=y
+# CONFIG_AMLOGIC_LED is not set
+# CONFIG_AMLOGIC_LEDRING is not set
 
 #
 # Audio Interface
@@ -6205,8 +6245,40 @@ CONFIG_AMLOGIC_CPU_INFO=y
 # CONFIG_AMLOGIC_INTERNAL_PHY is not set
 # CONFIG_AMLOGIC_SOC_INFO is not set
 # CONFIG_GATOR is not set
-# CONFIG_AES_HWKEY_GCM is not set
+CONFIG_AMLOGIC_GLOBAL_TIMER=y
+CONFIG_AMLOGIC_GLOBAL_TIMER_CORE=y
+# CONFIG_AMLOGIC_GLOBAL_TIMER_ISP is not set
+CONFIG_AMLOGIC_GLOBAL_TIMER_OUTPUT=y
+CONFIG_AMLOGIC_GLOBAL_TIMER_INPUT=y
+# CONFIG_MFD_ROHM_BD2657 is not set
+
+#
+# MESON MHU M4 Support
+#
+# CONFIG_AMLOGIC_MFH_MODULE is not set
+# end of MESON MHU M4 Support
+
+# CONFIG_MESON_I2C_SLAVE is not set
+
+#
+# MESON hw spin lock Support
+#
+CONFIG_AMLOGIC_HWSPINLOCK=y
+# end of MESON hw spin lock Support
+
+CONFIG_AMLOGIC_MESON_RTC=y
+# CONFIG_AMLOGIC_IIO is not set
 # CONFIG_VAD_WAKEUP_ASR is not set
+
+#
+# Amlogic MKL Support
+#
+# CONFIG_AMLOGIC_MKL is not set
+# end of Amlogic MKL Support
+
+# CONFIG_AMLOGIC_FREERTOS is not set
+# CONFIG_AES_HWKEY_GCM is not set
+CONFIG_AMLOGIC_MCLK_GPIO=y
 # end of Amlogic Device Drivers
 
 #
@@ -6355,6 +6427,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_BEFS_FS is not set
 # CONFIG_BFS_FS is not set
 # CONFIG_EFS_FS is not set
+# CONFIG_YAFFS_FS is not set
 # CONFIG_JFFS2_FS is not set
 # CONFIG_CRAMFS is not set
 CONFIG_SQUASHFS=y
@@ -6509,6 +6582,7 @@ CONFIG_KEYS_COMPAT=y
 # CONFIG_KEYS_REQUEST_CACHE is not set
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
+# CONFIG_TRUSTED_KEYS is not set
 # CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEY_DH_OPERATIONS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
