--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -6226,7 +6226,11 @@ CONFIG_AMLOGIC_SERIAL_MESON_CONSOLE=y
 CONFIG_MTD_RESV_MESON=y
 # end of Meson MTD RESERVED AREA MANAGEMENT Support
 
-# CONFIG_AMLOGIC_LED is not set
+CONFIG_AMLOGIC_LED=y
+# CONFIG_AMLOGIC_LEDS_TLC59116 is not set
+# CONFIG_AMLOGIC_LEDS_AW9523B is not set
+# CONFIG_AMLOGIC_LEDS_STATE is not set
+CONFIG_AMLOGIC_LEDS_BCT3236=y
 # CONFIG_AMLOGIC_LEDRING is not set
 
 #
