Amlogic-ne: enable amlogic led in linux config for bct3236

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -6185,6 +6185,7 @@ CONFIG_MTD_RESV_MESON=y
 
 CONFIG_AMLOGIC_LED=y
 CONFIG_AMLOGIC_LEDS_TLC59116=y
+CONFIG_AMLOGIC_LEDS_BCT3236=y
 CONFIG_AMLOGIC_LEDS_STATE=y
 
 #
