linux:Amlogic-ne: bump package to bca5f616

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -2177,6 +2177,7 @@ CONFIG_MESON_GXL_PHY=y
 CONFIG_MICROCHIP_PHY=m
 # CONFIG_MICROCHIP_T1_PHY is not set
 # CONFIG_MICROSEMI_PHY is not set
+CONFIG_MOTORCOMM_PHY=y
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_NXP_TJA11XX_PHY is not set
 # CONFIG_QSEMI_PHY is not set
